<resources>
    <string name="app_name">JenosPizza</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_main">Inicio</string>
    <string name="action_control">Control</string>
    <string name="action_map">Mapa</string>

    <string name="title_activity_splash">Splash</string>

    <string name="buscar">Buscar</string>
    <string name="agregar">Agregar</string>
    <string name="eliminar">Eliminar</string>
    <string name="cambiar">Cambiar</string>

    <string name="nomAct">Sede:</string>
    <string name="latAct">Latitud:</string>
    <string name="lonAct">Longitud:</string>

    <string name="nomNew">Nuevo Nombre</string>
    <string name="latNew">Nueva Latitud</string>
    <string name="lonNew">Nueva longitud</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
